--- a/template/.github/workflows/rust-ci.yaml
+++ b/template/.github/workflows/rust-ci.yaml
@@ -23,21 +23,13 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.77.0
           components: rustfmt, clippy
-          default: true
       - name: Check formatting
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+        run: cargo fmt --all -- --check
       - name: Run clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all -- -D warnings
+        run: cargo clippy --all -- -D warnings
 
   coverage:
     name: Run tests with coverage
@@ -55,33 +47,30 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.77.0
-          default: true
+        uses: dtolnay/rust-toolchain@stable
       - name: Build the binary
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
+        run: cargo build
         env:
           CARGO_INCREMENTAL: '0'
           RUSTC_BOOTSTRAP: '1'
           RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
           RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
       - name: Run unit tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+        run: cargo test
         env:
           CARGO_INCREMENTAL: '0'
           RUSTC_BOOTSTRAP: '1'
           RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
           RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
       - name: Install grcov
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: 'grcov --version 0.8.9'
+        run: |
+            if [ ! -x  ~/.cargo/bin/grcov ]
+            then
+                wget -O /tmp/grcov.tar.bz2 https://github.com/mozilla/grcov/releases/download/v0.8.19/grcov-x86_64-unknown-linux-gnu.tar.bz2
+                tar xjf /tmp/grcov.tar.bz2
+                chmod +x grcov
+                mv grcov ~/.cargo/bin/
+            fi
       - name: Run grcov
         run: grcov . -s . --binary-path ./target/debug/ --excl-start '^mod\s+tests\s*\{$' -t covdir --branch --ignore-not-existing --keep-only 'src/**' -o ./target/covdir.json
       - name: Generate coverage report
